<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

       >

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                custom:pager_animation="Accordion"
                custom:auto_cycle="true"
                custom:indicator_visibility="visible"
                custom:pager_animation_span="1100" />









        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_map"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/lightblue"
                android:gravity="center"
                android:text="@string/btn_map"
                android:textColor="@color/white"
                android:elevation="5dp" />

            <Button
                android:id="@+id/btn_direction"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/lightblue"
                android:gravity="center"
                android:text="@string/btn_direction"
                android:textColor="@color/white"
                android:elevation="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/txt_spot_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/background_material_dark"
            android:textSize="20sp"
            android:background="@color/white"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/label_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_discription"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/txt_spot_discrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/background_material_dark"
            android:textSize="20sp"
            android:background="@color/white"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/label_famous_things"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_famous_things"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/txt_spot_famous_things"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/background_material_dark"
            android:textSize="20sp"
            android:background="@color/white"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/label_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="start"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/label_hotels"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown"
            android:elevation="5dp" />

        <TextView
            android:id="@+id/txt_spot_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/background_material_dark"
            android:textSize="20sp"
            android:background="@color/white"
            android:elevation="5dp" />
    </LinearLayout>

</ScrollView>